@@ -1,0 +1,7 @@
+<configure
+   xmlns="http://namespaces.zope.org/zope"
+   >
+
+  <include package=".exportimport" />
+
+</configure>
