@@ -1,0 +1,5 @@
+# XXX refactor the form controller from CMFSetup-style to GenericSetup
+from formcontroller import importCMFFormController
+from formcontroller import exportCMFFormController
+from formcontroller import CMFFormControllerExportConfigurator
+from formcontroller import CMFFormControllerImportConfigurator
